test/error/error.input068.zc
Redefinition of typedef:FOO on line 2
